    into a single pseudo-module
  * now also replaces '.' by '@' in enumerator types for more consistent debug info

2009-06-07 Version 0.6

  * removed LF_DERIVED info from debug info, as it is inconsistent in DMD generated info
    with more than 4096 type entries

2009-06-08 Version 0.7

  * corrected number of field entries in classes or struct, because DMD miscounts private members

2009-06-11 Version 0.8

  * tweaked visualizer macros to detect uninitialized associative arrays and to limit expansion
    to arrays with less than 1024 entries
  * renamed data pointer member of dynamic arrays to "ptr" to be consistent with the array property
    in D.

2009-06-19 Version 0.9

  * fixed line number info at the end of a segment or when switching to another file 
    because of inline expansion
  * fixed line numbers > 32767 and sections with 0 line number entries

2009-08-12 Version 0.10

  * better support for DMC:
    - entries LF_FRIENDFCN removed
    - entries LF_FRIENDCLS, LF_VBCLASS and LF_IVBCLASS converted
    thanks to Andrew.
  * derived-classes info in class entry now cleared to be consistent with removal of LF_DERIVED

2009-12-29 Version 0.11

  * basic types now show with their D names, not as C types
  * "enum" prefix removed from type names of enumerator types
  * added type information for complex data types
  * dmd-patch needed for long/ulong support (http://d.puremagic.com/issues/show_bug.cgi?id=3373)
  * experimental hack to add lexical scope to local variables (dmd patch in
    http://d.puremagic.com/issues/show_bug.cgi?id=3657 needed)

Version 0.12

  * added patch to convert binaries produced by Metroworks CodeWarrior
  * names of local function are now demangled
  * dmd 2.041 fixes long/ulong support (patch http://d.puremagic.com/issues/show_bug.cgi?id=3373
    no longer needed)
  * added managed C++ project to integrate cv2pdb with CLR (thanks to Alexander Bothe)