@@ -1,1 +1,1 @@
-VERSION = 0.11
+VERSION = 0.12
